# cescg-voronoi

./: .gitignore  CMakeLists.txt  README.md
include/cescg/: bbox.hpp  cescg.hpp  delaunay.hpp  grid.hpp  halfplane.hpp  image.hpp  polygon.hpp  randgen.hpp  rasterizer.hpp  utils.hpp  utils.hpp.in  voronoi.hpp  vororegion.hpp
src/cescg/: bbox.cpp  delaunay.cpp  halfplane.cpp  image.cpp  polygon.cpp  randgen.cpp  rasterizer.cpp  voronoi.cpp  vororegion.cpp
src/cescg/voronoi/: voronoi_centroidal.cpp  voronoi_part.cpp  voronoi_utils.cpp
src/demos/: frontprop.cpp  mosaicking.cpp  stippling.cpp  texture.cpp
src/test/: test_image.cpp  test_voronoi.cpp  test_voronoi_centroidal.cpp
